syntax = "proto3";
import "google/protobuf/wrappers.proto";
package Elsa.Runtime.ProtoActor.Messages;
option csharp_namespace = "Elsa.Runtime.Protos";

// Empty response type.
message Unit {}

message ExecuteWorkflowDefinitionRequest {
  string id = 1;
  string versionOptions = 2;
  optional Input input = 3;
  optional string CorrelationId = 4;
}

message ExecuteWorkflowDefinitionResponse {
  Json workflowState = 1;
  repeated Bookmark bookmarks = 2;
}

message ExecuteExistingWorkflowInstanceRequest {
  string instanceId = 1;
  optional Bookmark bookmark = 2;
  optional Input input = 3;
}

message ExecuteNewWorkflowInstanceRequest {
  string definitionId = 1;
  string versionOptions = 2;
  optional Input input = 3;
  optional string CorrelationId = 4;
}

message ExecuteWorkflowRequest {
  string definitionId = 1;
  string versionOptions = 2;
  string workflowState = 3;
  optional Bookmark bookmark = 4;
  optional Input input = 5;
}

message ExecuteWorkflowInstanceResponse {
  Json workflowState = 1;
  repeated Bookmark bookmarks = 2;
}

message HandleStimulusRequest {
  string activityTypeName = 1;
  optional string hash = 2;
  optional Input input = 3;
}

message Bookmark {
  string id = 1;
  string name = 2;
  optional string hash = 3;
  optional string payload = 4;
  string activityId = 5;
  string activityInstanceId = 6;
  optional google.protobuf.StringValue callbackMethodName = 7;
}

message Json {
  string text = 1;
}

message Input {
  map<string, Json> Data = 1;
}